@@ -4,6 +4,7 @@
 
 - Summary tables for table DCIs
 - Multi-valued columns in summary tables
+- Threshold violation events have current DCI value as parameter 8 (named as "dciValue")
 
 
 *
